packages/core/src/radio-button/RadioButton.css
/* Styles applied to RadioButton container */
.saltRadioButton {
  display: inline-flex;
  gap: var(--salt-spacing-100);
  cursor: var(--salt-selectable-cursor-hover);
  position: relative;

  font-size: var(--salt-text-fontSize);
  line-height: var(--salt-text-lineHeight);
  font-family: var(--salt-text-fontFamily);
  font-weight: var(--salt-text-fontWeight);

  --radioButton-icon-marginTop: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2);
}

/* Styles applied when RadioButton is disabled */
.saltRadioButton-disabled {
  color: var(--salt-content-primary-foreground-disabled);
  cursor: var(--salt-selectable-cursor-disabled);
}

/* Styles applied to root component if `readOnly={true}` */
.saltRadioButton-readOnly {
  color: var(--salt-content-primary-foreground);
  cursor: var(--salt-selectable-cursor-readonly);
}

/* Styles applied to input component */
.saltRadioButton-input {
  cursor: inherit;
  position: absolute;
  height: var(--salt-size-selectable);
  opacity: 0;
  margin: var(--radioButton-icon-marginTop) 0 0 0;
  padding: 0;
  width: var(--salt-size-selectable);
  z-index: var(--salt-zIndex-default);
  box-sizing: border-box;
}

.saltRadioButtonIcon {
  margin-top: var(--radioButton-icon-marginTop);
  box-sizing: border-box;
}

/* Styles applied to icon when :focus-visible */
.saltRadioButton-input:focus-visible + .saltRadioButtonIcon {
  outline: var(--saltRadioButton-outline, var(--salt-focused-outline));
  outline-offset: var(--salt-focused-outlineOffset);
  border-color: var(--salt-selectable-borderColor-hover);
  color: var(--salt-selectable-foreground-hover);
}

.saltRadioButton-input:focus-visible + .saltRadioButtonIcon-checked {
  border-color: var(--salt-selectable-borderColor-selected);
  color: var(--salt-selectable-foreground-selected);
}

.saltRadioButton-error .saltRadioButton-input:focus-visible + .saltRadioButtonIcon {
  outline-color: var(--salt-status-error-foreground-decorative);
  border-color: var(--salt-status-error-borderColor);
  color: var(--salt-status-error-foreground-decorative);
}

.saltRadioButton-warning .saltRadioButton-input:focus-visible + .saltRadioButtonIcon {
  outline-color: var(--salt-status-warning-foreground-decorative);
  border-color: var(--salt-status-warning-borderColor);
  color: var(--salt-status-warning-foreground-decorative);
}

